[feature] 开发脚手架调整